src/app/resource-table-columns/resource-table-columns.component.scss
$boxShadow: 0 0 0.6em rgb(0 0 0 / 30%);
$padding: 0.5em;

@mixin backgroundStyle() {
    background-color: hsl(var(--primary-color-1-h), var(--primary-color-1-s), var(--background-lightness, 97%));

    &:hover {
        --background-lightness: 93%;
    }
}

:host > table {
    border-collapse: collapse;
    box-shadow: $boxShadow;
    position: absolute;

    :not(:focus-within) > & {
        display: none;
    }

    > tr > th {
        @include backgroundStyle();
        padding: $padding;
        user-select: none;
    }

    > tr > td {
        :not(:hover) > tr > & {
            display: none;
        }

        position: relative;

        > * {
            box-shadow: $boxShadow;
            position: absolute;
            top: 0;
        }

        > form > table {
            border-collapse: collapse;

            > tr {
                @include backgroundStyle();

                > th,
                > td {
                    > * {
                        padding: $padding;
                    }

                    > label {
                        display: block;
                        text-transform: uppercase;
                    }

                    > input {
                        background: inherit;
                        border: none;
                        color: inherit;
                        font: inherit;

                        &.ng-invalid {
                            color: red;
                        }
                    }
                }
            }
        }

        > .primary-paths {
            counter-reset: index;

            > .primary-path {
                @include backgroundStyle();
                counter-increment: index;
                cursor: grab;
                min-width: max-content;
                padding: $padding;
                text-transform: uppercase;

                &::before {
                    color: purple;
                    content: "#" counter(index);
                }
            }
        }
    }
}

